<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. Antoine Mairet
  ~ All Rights Reserved
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <Button
        android:id="@+id/buttonListMovie"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="156dp"
        android:layout_height="67dp"
        android:text="@string/let_s_go"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="259dp"
        android:layout_height="125dp"
        android:background="@drawable/text_view_border"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/top_movies_to_watch"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <TextView
        android:id="@+id/copyrightText"
        android:layout_width="197dp"
        android:layout_height="31dp"
        android:text="@string/Name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />
</androidx.constraintlayout.widget.ConstraintLayout>